fix flex wrapping of projects section and add assets/subsections for future projects

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,8 +73,14 @@ header nav ul li {
     font-size: 120%
 }
 
+.project_display {
+    display: flex;
+    flex-wrap: wrap
+}
+
 .projects_case img {
     width: 300px;
+    height: 200px;
     margin: 40px;
     border: 2px var(--white) solid;
     border-radius: 50%;
